All modules for backend done

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3"
 services:
   db:
     image: "postgres"
-    container_name: "my_postgres"
+    container_name: "disc_postgres"
     environment:
      - POSTGRES_PASSWORD=P@ssw0rd
     ports:
-      - "6543:5432"
+      - "5532:5432"
     volumes:
-      - discovery_sql:/var/lib/postgresql/data
+      - disc_sql:/var/lib/postgresql/data
 volumes:
-  discovery_sql:
+  disc_sql:
